--- a/.vscode/CSS/style.css
+++ b/.vscode/CSS/style.css
@@ -35,6 +35,72 @@ body {
 }
 
 .ToppingButtonDIV {
-  text-align: center;
+  position: relative;
+  left: 20px;
+}
+
+#WhippedCream {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+
+#Nuts {
+  top: 400px;
+  right: 0px;
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
+
+#Cinnamon {
+  top: 400px;
+  left: 600px;
+  position: relative;
+  width: 250px;
+  height: 300px;
+}
+#Wafers {
+  top: 400px;
+  right: 360px;
+  position: absolute;
+  width: 250px;
+  height: 300px;
+}
+
+#ChocaloteChips {
+  top: 400px;
+  right: 340px;
+  position: absolute;
+  width: 200px;
+  height: 300px;
+}
+
+.UserCup {
+  position: absolute;
+  width: 200px;
+}
+
+.Layers {
+  top: 20px;
+  right: 10px;
+}
+
+#Layer1 {
+  z-index: 10;
+}
+
+#Layer2 {
+z-index: 20;
+}
+
+#Layer3 {
+z-index: 30;
+}
+#UserCupInput {
+  width: 200px;
+}
+#Cookie {
+  position: absolute;
 }
 
